--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -65,13 +65,10 @@ jobs:
     steps:
     - name: Select latest qcow2 artifact
       id: get_artifact_id
-      # TODO: implement actual pagination
       # TODO: make it a composite action for reuse
       run: |
-        ARTIFACT_ID=$(curl -L --user ${{ github.actor }}:${{ github.token }} \
-        --header "Accept: application/vnd.github.v3+json" \
-        "https://api.github.com/repos/${{ github.repository }}/actions/artifacts?name=${{ env.artifact_name }}&per_page=100" \
-        | jq -r '.artifacts | map(select(.name == "${{ env.artifact_name }}")) | sort_by(.updated_at) | .[-1].workflow_run.id')
+        ARTIFACT_ID=$(gh api --paginate "/repos/spdk/spdk-ci/actions/artifacts?name=${{ env.artifact_name }}" \
+        -q '.artifacts | map(select(.name == "${{ env.artifact_name }}")) | sort_by(.updated_at) | .[-1].workflow_run.id')        
         echo "artifact_id=$ARTIFACT_ID" >> "$GITHUB_OUTPUT"
     outputs:
       artifact_id: ${{ steps.get_artifact_id.outputs.artifact_id }}
